--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/plus-jakarta-display.min.css");
 
 * {
@@ -50,4 +50,9 @@ th,
 td {
     border: 0;
     border-spacing: 0;
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+    background: none !important;
 }
